[gd_scene load_steps=2 format=3 uid="uid://c3j8xqwfh2m5k"]

[ext_resource type="Script" path="res://ui/forge_terminal.gd" id="1_terminal"]

[node name="ForgeTerminal" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_terminal")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "âš’ WORLD FORGE âš’"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="OutputScroll" type="ScrollContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="OutputLabel" type="RichTextLabel" parent="PanelContainer/VBoxContainer/OutputScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
text = ""
scroll_following = true

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="InputContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="PromptLabel" type="Label" parent="PanelContainer/VBoxContainer/InputContainer"]
layout_mode = 2
text = "Forge>"

[node name="PromptInput" type="LineEdit" parent="PanelContainer/VBoxContainer/InputContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Describe your world..."

[node name="CreateButton" type="Button" parent="PanelContainer/VBoxContainer/InputContainer"]
layout_mode = 2
text = "Create"

[node name="ButtonContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="SmiteButton" type="Button" parent="PanelContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "â˜  SMITE"

[node name="ChaosButton" type="Button" parent="PanelContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "âš¡ CHAOS"

[node name="ClearButton" type="Button" parent="PanelContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "ðŸ—‘ Clear World"
